--- a/style.css
+++ b/style.css
@@ -1,55 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-*{
-    margin:0;
-    padding:0;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'); 
+*{ 
+    margin:0; 
+    padding:0; 
+} 
+body{ 
+    font-family: "Montserrat", sans-serif; 
+} 
+header{ 
+    background-color: brown; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 14px; 
+} 
+.logo{ 
+    color: black; 
+    font-size: 36px; 
+    transition: 2s;
+} 
+nav{ 
+    display: flex; 
+    justify-content: space-evenly; 
+    align-items: center; 
+    gap: 110px; 
+    color: black; 
+} 
+ 
+a{ 
+    color:black; 
+    text-decoration: none;  
+} 
+img{ 
+    width: 400px; 
+    border-radius: 4px; 
+} 
+.banner{ 
+    background-color: black; 
+    color: white; 
+} 
+.container{ 
+    display: flex; 
+    justify-content:flex-start; 
+    align-items: center; 
+    gap: 80px; 
+} 
+article{ 
+    padding: 80px; 
+} 
+h1{ 
+    margin-bottom: 40px; 
+} 
+iframe{ 
+    border-radius: 10px; 
+    margin-top: 40px; 
 }
-body{
-    font-family: "Montserrat", sans-serif;
+.logo:hover{
+    transform: scale(1.2);
+    transition: 1s;
 }
-header{
-    background-color: brown;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 14px;
+.container img{
+    width:670px;
+    height:419px;
+    animation:anim1 4s infinite;
+    animation-fill-mode: forwards;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
 }
-.logo{
-    color: black;
-    font-size: 36px;
-}
-nav{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 110px;
-    color: black;
+@keyframes anim1{
+    0%{
+        border-radius:5%;
+    }
+    100%{
+        border-radius:20%;
+    }
 }
 
-a{
-    color:black;
-    text-decoration: none; 
-}
-img{
-    width: 400px;
-    border-radius: 4px;
-}
-.banner{
-    background-color: black;
-    color: white;
-}
-.container{
-    display: flex;
-    justify-content:flex-start;
-    align-items: center;
-    gap: 80px;
-}
-article{
-    padding: 80px;
-}
-h1{
-    margin-bottom: 40px;
-}
-iframe{
-    border-radius: 10px;
-    margin-top: 40px;
-}
+   
